@startuml

interface INewsDB {
    + saveNews($title, $category, $description, $source) : boolean
    + getNews() : array
    + deleteNews($id) : boolean
}

class NewsDB {
    - const DB_NAME = "news.db"
    - $_db : SQLite3

    + __construct()
    + __destruct()
    + saveNews($title, $category, $description, $source) : boolean
    + getNews() : array
    + deleteNews($id) : boolean
    -- internal methods --
    # getDb() : SQLite3
    - initDatabase() : void
}
class SQLite3

INewsDB <|.. NewsDB : implements
NewsDB --> SQLite3 : uses


@enduml
